--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2.3.4
