try to turn of parallel test execution in CI

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -17,3 +17,5 @@ jobs:
         with:
           java-version: adopt@1.11
       - run: sbt commitCheck
+        env:
+          TEST_IN_PARALLEL: false
