--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,5 @@
-version = 2.7.5
+version = 3.0.2
 style = defaultWithAlign
 maxColumn = 120
 rewrite.rules = [RedundantBraces,RedundantParens,PreferCurlyFors]
-danglingParentheses = true
+danglingParentheses.preset = true
