--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,6 @@
 version = 3.1.1
 style = defaultWithAlign
+runner.dialect = scala213
 maxColumn = 120
 rewrite.rules = [RedundantBraces,RedundantParens,PreferCurlyFors]
 danglingParentheses.preset = true
