--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - main
+      - java8
   pull_request:
     branches:
       - main
+      - java8
 env:
   JABBA_INDEX: 'https://github.com/typelevel/jdk-index/raw/main/index.json'
 jobs:
