add email to scala-steward job

--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -16,3 +16,4 @@ jobs:
         with:
           github-token: ${{ secrets.REPO_GITHUB_TOKEN }}
           branches: main,java8
+          author-email: 19939655+jbwheatley@users.noreply.github.com
