--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,17 @@
 {
 	"name": "Java",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/java:0-8",
+	"image": "mcr.microsoft.com/devcontainers/java:0-11",
 
 	"features": {
 		"ghcr.io/devcontainers/features/java:1": {
-			"version": "none",
+			"version": "8",
 			"installMaven": "false",
 			"installGradle": "false"
 		},
-		"ghcr.io/devcontainers-contrib/features/sbt-sdkman:2": {}
+		"ghcr.io/devcontainers-contrib/features/sbt-sdkman:2": {
+			"jdkVersion": "8"
+		}
 	},
 	"customizations": {
 		"vscode": {
