--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -16,7 +16,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: olafurpg/setup-scala@v14
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          java-version: temurin@17
+          distribution: temurin
+          java-version: 17
+          cache: sbt
       - run: sbt commitCheck
