--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: olafurpg/setup-scala@v14
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          java-version: temurin@17
+          distribution: temurin
+          java-version: 17
+          cache: sbt
       - uses: olafurpg/setup-gpg@v3
       - run: sbt ci-release
         env:
