--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -15,5 +15,5 @@ jobs:
         uses: scala-steward-org/scala-steward-action@v2
         with:
           github-token: ${{ secrets.REPO_GITHUB_TOKEN }}
-          branches: main,java8
+          branches: main
           author-email: 19939655+jbwheatley@users.noreply.github.com
