--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        command: [ testCore, testScalaTest, testZioTest, testMunit, testWeaver ]
+        command: [ testCore, testScalaTest, testZioTest, testMunit, testWeaver, testExamples ]
     steps:
       - uses: actions/checkout@v4
         with:
