--- a/.github/workflows/pact-publish.yml
+++ b/.github/workflows/pact-publish.yml
@@ -10,5 +10,4 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: sh ./scripts/publish_pacts.sh
-        shell: bash
+      - run: ./scripts/publish_pacts.sh
