--- a/.github/workflows/renovatebot.yml
+++ b/.github/workflows/renovatebot.yml
@@ -2,7 +2,7 @@ name: Renovate
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * 0'
 jobs:
   renovate:
     runs-on: ubuntu-latest
