--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Release
 on:
   push:
     tags: ["*"]
-env:
-  JABBA_INDEX: 'https://github.com/typelevel/jdk-index/raw/main/index.json'
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -17,6 +15,7 @@ jobs:
           distribution: temurin
           java-version: 21
           cache: sbt
+      - uses: sbt/setup-sbt@v1 #https://eed3si9n.com/setup-sbt/
       - run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
