Preserve line endings during formatting, to avoid changes due to different operating systems.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,3 +4,4 @@ runner.dialect = scala213
 maxColumn = 120
 rewrite.rules = [RedundantBraces,RedundantParens,PreferCurlyFors]
 danglingParentheses.preset = true
+lineEndings=preserve
